<resources>
    <string name="app_name">FilmZone</string>
    <string name="search">Search</string>
    <string name="change_language_settings">Language Settings</string>
    <string name="reminder_settings">Reminder Settings</string>
    <string name="now_playing">Now Playing</string>
    <string name="tv_show">TV Show</string>
    <string name="favorite">Favorite</string>

    <string name="rating">Rating</string>
    <string name="duration">Duration</string>
    <string name="lang">Language</string>
    <string name="genre">Genere</string>
    <string name="release">Release</string>
    <string name="overview">Overview</string>
    <string name="today_reminder">Today Reminder</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="empty_text">Favorite is Empty</string>

    <string name="last_air_date">Last Air Date</string>
    <string name="number_of_seasons">Number of Seasons</string>
    <string name="number_of_episodes">Number of Episodes</string>
</resources>
