<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.filmzone.feature.readmoreMovie.ReadmoreMovieActivity">
    <include layout="@layout/main_toolbar"/>

    <ScrollView
        android:layout_below="@id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <android.support.v7.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:elevation="12dp"
                android:id="@+id/view2"
                app:cardCornerRadius="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                >
                <RelativeLayout
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:gravity="center"
                    android:layout_gravity="center">
                    <ImageView
                        android:id="@+id/iv_poster"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:foregroundGravity="center"
                        />
                </RelativeLayout>
            </android.support.v7.widget.CardView>



            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                tools:text="Spider-Man"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_tag_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                tools:text="ini tambahan" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="25dp"
                    android:paddingTop="10dp"
                    android:paddingRight="25dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/tv_vote_average"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="7.0"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="#D2D2D2" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="25dp"
                    android:paddingTop="10dp"
                    android:paddingRight="25dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/tv_run_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="7.0"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/duration" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="#D2D2D2" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="25dp"
                    android:paddingTop="10dp"
                    android:paddingRight="25dp"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/tv_original_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="7.0"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lang" />

                </LinearLayout>




            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/genre"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/release"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                tools:text="2002-05-01"
                android:textColor="@color/colorAccent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/overview"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                tools:text="bla bla"/>

        </LinearLayout>
    </ScrollView>
    <include layout="@layout/main_progress_bar" />
</RelativeLayout>
